# practice-1-estructuras

./: .gitignore  CMakeLists.txt  README.md  balancedtree.cpp  balancedtree.h  heapsort.cpp  heapsort.h  main.cpp  quicksort.cpp  quicksort.h
data/: dataset.txt
include/: balancedtree.h  heapsort.h  quicksort.h
src/: balancedtree.cpp  dataset_generator.cpp  heapsort.cpp  quicksort.cpp
